# pgpanalysis

./: .gitignore  README
Cwot/: Betweenness.txt  Makefile  README  TODO  docwot.pl  fetchid.pl  wot.c
doc/: output-formats.txt  references.txt
keyanalyze/: Changelog  Makefile  README  allkeys.sh  analyze.sh  keyanalyze.1  keyanalyze.c  process_keys.1  process_keys.c
keyanalyze/pgpring/: ChangeLog  Makefile.am  Makefile.in  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  extlib.c  lib.c  lib.h  mkinstalldirs  pgplib.c  pgplib.h  pgppubring.c  pgpring.1
keyanalyze/scripts/: 1000_bottom.php  1000_top.php  htmlify_report  report_bottom.php  report_top.php  top50.pl  top50comments.txt
keyanalyze/willy/: README  cosign  msd2html  non-recip  party-table.pl  report  sigids  unsign
scripts/: pgpring-analyze.sh  pgpring-extract.sh  pgpring-statistics.py  policies-check.py  process-keys.py
utils/: preprocessed2gexf.py
